Ajout Regex, variable,  fonction test, correct css

--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
             >
               <div
                 class="formData">
-                <label>Prénom</label><br>
+                <label class="first-label" for="first">Prénom</label><br>
                 <input
                   class="text-control"
                   type="text"
@@ -75,7 +74,7 @@
               </div>
               <div
                 class="formData">
-                <label>Nom</label><br>
+                <label class="last-label" for="last">Nom</label><br>
                 <input
                   class="text-control"
                   type="text"
@@ -85,7 +84,7 @@
               </div>
               <div
                 class="formData">
-                <label>E-mail</label><br>
+                <label class="email-label" for="email">E-mail</label><br>
                 <input
                   class="text-control"
                   type="email"
@@ -95,7 +94,7 @@
               </div>
               <div
                 class="formData">
-                <label>Date de naissance</label><br>
+                <label class="birthdate-label" for="birthdate">Date de naissance</label><br>
                 <input
                   class="text-control"
                   type="date"
@@ -105,7 +104,7 @@
               </div>
               <div
                 class="formData">
-                <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                <label class="quantity-label" for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
@@ -187,7 +186,7 @@
                   id="checkbox1"
                   checked
                 />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1" required>  <!-- Change class to checkbox1-label-->
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
