--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -13,12 +12,11 @@
 
   <body>
     <header>
-      <div class="topnav" id="myTopnav">
+      <div class="topnav" id="mytopnav">
         <div class="header-logo">
         <img alt="logo" src="Logo.png">
         </div>
         <div class="main-navbar">
-          <a href="#" class="active"><span>Accueil</span></a>
           <a href="#"><span>Détails de l'évènement</span></a>
           <a href="#"><span>À propos</span></a>
           <a href="#"><span>Contact</span></a>
@@ -42,14 +40,14 @@
             aux réservations... Places limitées !
           </p>
           <button class="btn-signup modal-btn">
-            je m'inscris
+            Je M'inscris
           </button>
         </div>
         <div class="hero-img">
           <img src="./bg_img.jpg" alt="img" >
         </div>
         <button class="btn-signup modal-btn">
-          je m'inscris
+          Je M'inscris
         </button>
       </div>
 
