--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img alt="logo" src="Logo.png">
         </div>
         <div class="main-navbar">
-          <a href="#"><span>Détails de l'évènement</span></a>
-          <a href="#"><span>À propos</span></a>
-          <a href="#"><span>Contact</span></a>
-          <a href="#"><span>Évènements passés</span></a>
+          <a href="#" class="main-link"><span>Détails de l'évènement</span></a>
+          <a href="#" class="main-link"><span>À propos</span></a>
+          <a href="#" class="main-link"><span>Contact</span></a>
+          <a href="#" class="main-link"><span>Évènements passés</span></a>
           <a href="javascript:void(0);" class="icon" onclick="editNav()">
             <i class="fa fa-bars"></i>
           </a>
