--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="content">
           <span class="close"></span>
           <div class="modal-body">
-            <form name="reserve" action="index.html" method="get" >
+            <form class="form-body" name="reserve" action="index.html" method="get" >
               <div class="form-data">
                 <label class="first-label" for="first">Prénom</label>
                 <input
