--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </button>
       </div>
 
-      <div class="bground">
+      <div class="bground hidden">
         <div class="content">
           <span class="close"></span>
           <div class="modal-body">
