html and css refactoring

--- a/index.html
+++ b/index.html
@@ -58,132 +58,67 @@
             <form class="form-body" name="reserve" action="index.html" method="get" >
               <div class="form-data">
                 <label class="first-label" for="first">Prénom</label>
-                <input
-                  class="text-control"
-                  type="text"
-                  id="first"
-                  name="first"
-                ><br>
+                <input class="text-control" type="text" id="first" name="first"><br>
               </div>
               <span class="form-alert" id="message-first"></span>
               <div class="form-data">
                 <label class="last-label" for="last">Nom</label><br>
-                <input
-                  class="text-control"
-                  type="text"
-                  id="last"
-                  name="last"
-                ><br>
+                <input class="text-control" type="text" id="last" name="last"><br>
               </div>
               <span class="form-alert" id="message-name"></span>
               <div class="form-data">
                 <label class="email-label" for="email">E-mail</label><br>
-                <input
-                  class="text-control"
-                  type="email"
-                  id="email"
-                  name="email"
-                ><br>
+                <input class="text-control" type="email" id="email" name="email"><br>
               </div>
               <span class="form-alert" id="message-mail"></span>
               <div class="form-data">
                 <label class="birthdate-label" for="birthdate">Date de naissance</label><br>
-                <input
-                  class="text-control"
-                  type="date"
-                  id="birthdate"
-                  name="birthdate"
-                ><br>
+                <input class="text-control" type="date" id="birthdate" name="birthdate"><br>
               </div>
               <span class="form-alert" id="message-date"></span>
               <div class="form-data">
                 <label class="quantity-label" for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input 
-                type="number" 
-                class="text-control" 
-                id="quantity" 
-                name="quantity" 
-                >
+                <input type="number" class="text-control" id="quantity" name="quantity">
               </div>
               <span class="form-alert" id="message-quantity"></span>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
                 class="form-data">
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location1"
-                  name="location"
-                  value="New York"
-                >
+                <input class="checkbox-input" type="radio" id="location1" name="location" value="New York">
                 <label class="checkbox-label" for="location1">
                   <span class="checkbox-icon"></span>
-                  New York</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location2"
-                  name="location"
-                  value="San Francisco"
-                >
+                  New York
+                </label>
+                <input class="checkbox-input" type="radio" id="location2" name="location" value="San Francisco">
                 <label class="checkbox-label" for="location2">
                   <span class="checkbox-icon"></span>
-                  San Francisco</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location3"
-                  name="location"
-                  value="Seattle"
-                >
+                  San Francisco
+                </label>
+                <input class="checkbox-input" type="radio" id="location3" name="location" value="Seattle">
                 <label class="checkbox-label" for="location3">
                   <span class="checkbox-icon"></span>
-                  Seattle</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location4"
-                  name="location"
-                  value="Chicago"
-                >
+                  Seattle
+                </label>
+                <input class="checkbox-input" type="radio" id="location4" name="location" value="Chicago">
                 <label class="checkbox-label" for="location4">
                   <span class="checkbox-icon"></span>
-                  Chicago</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location5"
-                  name="location"
-                  value="Boston"
-                >
+                  Chicago
+                </label>
+                <input class="checkbox-input" type="radio" id="location5" name="location" value="Boston">
                 <label class="checkbox-label" for="location5">
                   <span class="checkbox-icon"></span>
-                  Boston</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location6"
-                  name="location"
-                  value="Portland"
-                >
+                  Boston
+                </label>
+                <input class="checkbox-input" type="radio" id="location6" name="location" value="Portland">
                 <label class="checkbox-label" for="location6">
                   <span class="checkbox-icon"></span>
-                  Portland</label
-                >
+                  Portland
+                </label>
               </div>
               <span class="form-alert" id="message-location"></span>
               <div
                 class="form-data">
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="checkbox1"
-                >
+                <input class="checkbox-input" type="checkbox" id="checkbox1">
                 <label class="checkbox2-label" for="checkbox1" >  
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
@@ -197,11 +132,7 @@
                 </label>
                 <br>
               </div>
-              <input
-                class="btn-submit button"
-                type="submit"
-                value="C'est parti"
-              >
+              <input class="btn-submit button" type="submit" value="C'est parti">
             </form>
           </div>
         </div>
