Refactoring thanks display

--- a/index.html
+++ b/index.html
@@ -137,7 +137,17 @@
           </div>
         </div>
       </div>
-    </main>
+    <div class="thanks hidden">
+      <div class="thanks-modal">
+        <h1 class="thanks-modal-txt"> 
+          Merci pour votre inscription
+        </h1>
+        <button class="thanks-modal-btn button close-btn"> 
+          Fermer
+        </button>
+      </div>
+    </div>
+  </main>
     <footer>
       <p class="copyrights">
         Copyright 2014 - 2022, GameOn Inc.
